k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fox-auditoria
  labels:
    name: fox-auditoria
    app: sistema-auditoria-fox
